# woocommerce_pydantic

./: .coverage  .env.tests.example  .gitignore  README.md  pyproject.toml
resources/: woocommerce-openapi-3.0.x.yml
src/woocommerce_pydantic/: __init__.py  models.py  response_models.py
src/woocommerce_pydantic/wcapi/: api.py  wc_api.py
src/woocommerce_pydantic/wcapi/models/: collections.py  resource_lists.py  responses.py  wc_collections.py  wc_endpoints.py  wc_resources.py
tests/: conftest.py  test_resources.py
tests/data/responses/v3/: order.yaml  orders.yaml  product_variations.json
