[project]
name = "woocommerce-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tombola", email = "tombola@github" }
]
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D212", "D203", "D102", "D105"]

[tool.ruff.per-file-ignores]
"test_*" = ["S101"]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
# addopts = "--cov --cov-report=term-missing --cov-fail-under=80"
norecursedirs = ["manage.py", ".vscode", ".git", ".venv"]

[tool.coverage.run]
omit = ["*/.vscode/*",]
