[project]
name = "woocommerce-pydantic"
version = "0.1.0"
description = "Pydantic models for WooCommerce API responses"
readme = "README.md"
authors = [
    { name = "tombola", email = "tombola@github" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic[email]>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "woocommerce>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D212", "D203", "D102", "D105"]

[tool.ruff.per-file-ignores]
"test_*" = ["S101", "PLR2004"]
"responses.py" = ["D101"]
"resources.py" = ["D101", "E501"]


[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "responses>=0.25.6",
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
# addopts = "--cov --cov-report=term-missing --cov-fail-under=80"
norecursedirs = ["manage.py", ".vscode", ".git", ".venv", "dependencies"]

[tool.coverage.run]
omit = ["*/.vscode/*", "dependencies/*", "tests/*"]
